# gandalf

./: #README.md#  .envrc  .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  bochsrc.txt  boot.sh  boot_sector.asm  build-grub-osx.sh  build-tools.sh  build.sh  cleanup-format.sh  env.sh  environment  print_hex.asm  print_string.asm
build-tools/: build.sh  environment
build-tools/archive/: libiconv-1.9.2.tar.bz2  mpc-1.0.2.tar.bz2
check_example/src/: main.c  money.c  money.h
check_example/tests/: check_money.c
contrib/x86 Assembly.tmbundle/Syntaxes/: x86 Assembly.tmLanguage
lib/: gdt.asm  switch_to_pm.asm
lib/16bit/: disk_load.asm  print_hex.asm  print_string.asm
lib/32bit/: clear_screen.asm  print_string_pm.asm
lib/libc/: README.md
lib/libc/dietlibc-0.33/: url.txt
lib/libc/klibc-2.0.1/: klibc.spec
lib/malloc/: url.txt
lib/malloc/dlmalloc/: url.txt
lib/malloc/liballoc/: url.txt
lib/malloc/ptmalloc3/: url.txt
lib/usr/: REDAME.md
lib/usr/include/: blcr_common.h
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld
src/asm/: boot_sector.asm  gdt.asm  kernel_entry.asm  switch_to_pm.asm
src/asm/16bit/: disk_load.asm  print_hex.asm  print_string.asm
src/asm/32bit/: clear_screen.asm  print_string_pm.asm
src/c/: kernel.c
src/c/drivers/: README.md  cursor.c  cursor.h  low_level.h  screen.c  screen.h
src/c/include/: errno.h  malloc.h  string.h  version.h
src/c/kernel/: tty.c  (+18 more)
src/interrupts/: gdt.rs  mod.rs
src/memory/: mod.rs  stack_allocator.rs
tests/: Makefile  strlen_unittest.c
(+172 files in other folders)
