[package]
name = "gandalf_os"
version = "1.0.0"
authors = ["Sven Strittmatter <ich@weltraumschaf.de>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.3"
spin = "0.4.6"
multiboot2 = "0.3.2"
bitflags = "0.8.2"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = "0.5.0"
bit_field = "0.9.0"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]