[package]
name = "gandalf"
version = "1.0.0"
authors = ["Sven Strittmatter <ich@weltraumschaf.de>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-gandalf.json"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]