[package]
name = "gandalf"
version = "1.0.0"
authors = ["Sven Strittmatter <ich@weltraumschaf.de>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-gandalf.json"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.3.5"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[features]
integration-test = []